--- a/AppRazor/Pages/Shared/_Layout.cshtml
+++ b/AppRazor/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Seed">Seed</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/FriendsByCountry">Friends By Country</a>
+                        </li>
                     </ul>
                 </div>
             </div>
