--- a/AppRazor/Pages/Shared/_Layout.cshtml
+++ b/AppRazor/Pages/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Seed">Seed</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Seed">Seed</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/FriendsByCountry">Friends By Country</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/FriendsByCountry">Friends By Country</a>
                         </li>
                     </ul>
                 </div>
