--- a/AppRazor/Pages/Shared/_Layout.cshtml
+++ b/AppRazor/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/FriendsByCountry">Friends By Country</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/FriendsAndPets">Friends And Pets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/FriendsByCity">Friends By City</a>
+                        </li>
                     </ul>
                 </div>
             </div>
